{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 2831,
  "lineage": "52d48e59-c03d-7787-161e-86b9674350df",
  "resources": [
    {
      "module": "module.autoscaler",
      "mode": "data",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-01d1b4f3b7868a9a1",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0800e97e3b7e88ee0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0800e97e3b7e88ee0",
            "instance_id": "i-0800e97e3b7e88ee0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0c9d7c907c0fd2cba",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-101-216.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.216",
            "public_dns": "ec2-18-130-224-228.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.224.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b1dd757e2b43cc79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072d52098bc8709ca",
            "tags": {
              "Name": "lighting-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0b94d8d1034624e9d",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0d1372db4df1918ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0d1372db4df1918ba",
            "instance_id": "i-0d1372db4df1918ba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08f4bfe793df75367",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-102-72.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.72",
            "public_dns": "ec2-18-134-207-1.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.207.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb5e471c2d00192f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d70d0fc2000c67c",
            "tags": {
              "Name": "heating-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-05797ddfdbfb944e7",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-06f8c65a1c8c9c71f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-06f8c65a1c8c9c71f",
            "instance_id": "i-06f8c65a1c8c9c71f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-04a978a3b39d5b8b9",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-103-72.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.103.72",
            "public_dns": "ec2-13-40-51-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.51.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d1c3710072784f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d18990e5b426674a",
            "tags": {
              "Name": "status-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0d841c575567e227b",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0d5e5fdf52921b2ed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0d5e5fdf52921b2ed",
            "instance_id": "i-0d5e5fdf52921b2ed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0259ed693e02ff58f",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-1-201.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0092a40687dff6aa9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099ddb64b3b7437cf",
            "tags": {
              "Name": "auth-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda"
            ]
          }
        }
      ]
    },
    {
      "module": "module.autoscaler",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "arn_suffix": "targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg0",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "lights"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "arn_suffix": "targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg1",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "heating"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "arn_suffix": "targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg2",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "status"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "arn_suffix": "targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-private-tg0",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "auth"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          }
        }
      ]
    },
    {
      "module": "module.external_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-public-lb/fcb7e558670e640f",
            "arn_suffix": "app/terraform-project-public-lb/fcb7e558670e640f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-project-public-lb-1443818639.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-public-lb/fcb7e558670e640f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-project-public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072d52098bc8709ca"
              },
              {
                "subnet_id": "subnet-07d70d0fc2000c67c"
              },
              {
                "subnet_id": "subnet-0d18990e5b426674a"
              }
            ],
            "subnets": [
              "subnet-072d52098bc8709ca",
              "subnet-07d70d0fc2000c67c",
              "subnet-0d18990e5b426674a"
            ],
            "vpc_id": "vpc-0e20b36aa455e3cb2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Endpoint not found.",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-public-lb/fcb7e558670e640f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_load_balancer.aws_lb.load_balancer",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/ce636f7e945733ee",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/ce636f7e945733ee",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_load_balancer.aws_lb.load_balancer",
            "module.external_load_balancer.aws_lb_listener.listener",
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/480995cf52e711be",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/480995cf52e711be",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_load_balancer.aws_lb.load_balancer",
            "module.external_load_balancer.aws_lb_listener.listener",
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/324ca8b03ae0074d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d/324ca8b03ae0074d",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-public-lb/fcb7e558670e640f/7e047b1eb387839d",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external_load_balancer.aws_lb.load_balancer",
            "module.external_load_balancer.aws_lb_listener.listener",
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "arn_suffix": "targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg0",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "lights"
            },
            "tags_all": {
              "app": "lights"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "arn_suffix": "targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg1",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "heating"
            },
            "tags_all": {
              "app": "heating"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "arn_suffix": "targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-public-tg2",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "status"
            },
            "tags_all": {
              "app": "status"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1-20240308084118842400000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg0/edb673e1f0de82f1",
            "target_id": "i-0800e97e3b7e88ee0"
          },
          "dependencies": [
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f-20240308084118868200000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg1/82c3e421cf00012f",
            "target_id": "i-0d1372db4df1918ba"
          },
          "dependencies": [
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959-20240308085539215700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-public-tg2/9ff3673403783959",
            "target_id": "i-06f8c65a1c8c9c71f"
          },
          "dependencies": [
            "module.external_load_balancer.aws_lb_target_group.target",
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d841c575567e227b",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0d5e5fdf52921b2ed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5e5fdf52921b2ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0259ed693e02ff58f",
            "private_dns": "ip-10-0-1-201.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0092a40687dff6aa9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099ddb64b3b7437cf",
            "tags": {
              "Name": "auth-server"
            },
            "tags_all": {
              "Name": "auth-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda"
            ]
          },
          "dependencies": [
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b94d8d1034624e9d",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0d1372db4df1918ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1372db4df1918ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f4bfe793df75367",
            "private_dns": "ip-10-0-102-72.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.72",
            "public_dns": "ec2-18-134-207-1.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.207.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb5e471c2d00192f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d70d0fc2000c67c",
            "tags": {
              "Name": "heating-server"
            },
            "tags_all": {
              "Name": "heating-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          },
          "dependencies": [
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d1b4f3b7868a9a1",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-0800e97e3b7e88ee0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0800e97e3b7e88ee0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9d7c907c0fd2cba",
            "private_dns": "ip-10-0-101-216.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.216",
            "public_dns": "ec2-18-130-224-228.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.224.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b1dd757e2b43cc79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072d52098bc8709ca",
            "tags": {
              "Name": "lighting-server"
            },
            "tags_all": {
              "Name": "lighting-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          },
          "dependencies": [
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05797ddfdbfb944e7",
            "arn": "arn:aws:ec2:eu-west-2:637423603362:instance/i-06f8c65a1c8c9c71f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f8c65a1c8c9c71f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a978a3b39d5b8b9",
            "private_dns": "ip-10-0-103-72.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.103.72",
            "public_dns": "ec2-13-40-51-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.51.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d1c3710072784f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d18990e5b426674a",
            "tags": {
              "Name": "status-server"
            },
            "tags_all": {
              "Name": "status-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bcb4ad6d1219c71",
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda",
              "sg-0f99b39258d2804dd"
            ]
          },
          "dependencies": [
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-private-lb/56c6a3bcf95b0003",
            "arn_suffix": "app/terraform-project-private-lb/56c6a3bcf95b0003",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-terraform-project-private-lb-2021203870.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-private-lb/56c6a3bcf95b0003",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-project-private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d5f9d0bbf10a37f",
              "sg-0a8a3a6628ffbaeda"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055d26e3569f12d74"
              },
              {
                "subnet_id": "subnet-085f9557630be32fd"
              },
              {
                "subnet_id": "subnet-099ddb64b3b7437cf"
              }
            ],
            "subnets": [
              "subnet-055d26e3569f12d74",
              "subnet-085f9557630be32fd",
              "subnet-099ddb64b3b7437cf"
            ],
            "vpc_id": "vpc-0e20b36aa455e3cb2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-private-lb/56c6a3bcf95b0003/a577fe2729a24ed8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Endpoint not found.",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-private-lb/56c6a3bcf95b0003/a577fe2729a24ed8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:loadbalancer/app/terraform-project-private-lb/56c6a3bcf95b0003",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.internal_load_balancer.aws_lb.load_balancer",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-private-lb/56c6a3bcf95b0003/a577fe2729a24ed8/1e70e842293910c4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener-rule/app/terraform-project-private-lb/56c6a3bcf95b0003/a577fe2729a24ed8/1e70e842293910c4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:listener/app/terraform-project-private-lb/56c6a3bcf95b0003/a577fe2729a24ed8",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.internal_load_balancer.aws_lb.load_balancer",
            "module.internal_load_balancer.aws_lb_listener.listener",
            "module.internal_load_balancer.aws_lb_target_group.target",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "arn_suffix": "targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-project-private-tg0",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "auth"
            },
            "tags_all": {
              "app": "auth"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38-20240308105901681300000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:637423603362:targetgroup/terraform-project-private-tg0/70fc1d0c7e142e38",
            "target_id": "i-0d5e5fdf52921b2ed"
          },
          "dependencies": [
            "module.instances.aws_instance.auth",
            "module.instances.aws_instance.heating",
            "module.instances.aws_instance.lighting",
            "module.instances.aws_instance.status",
            "module.instances.data.aws_ami.ubuntu",
            "module.internal_load_balancer.aws_lb_target_group.target",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_ingress",
            "module.security.aws_security_group.allow_internal_ingress",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:security-group/sg-00d5f9d0bbf10a37f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d5f9d0bbf10a37f",
            "ingress": [],
            "name": "allow-egress",
            "name_prefix": "",
            "owner_id": "637423603362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:security-group/sg-0f99b39258d2804dd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f99b39258d2804dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ingress",
            "name_prefix": "",
            "owner_id": "637423603362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_internal_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:security-group/sg-0a8a3a6628ffbaeda",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a8a3a6628ffbaeda",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "allow-internal-ingress",
            "name_prefix": "",
            "owner_id": "637423603362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:security-group/sg-00bcb4ad6d1219c71",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00bcb4ad6d1219c71",
            "ingress": [
              {
                "cidr_blocks": [
                  "185.205.174.138/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "637423603362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-670126691",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00d5f9d0bbf10a37f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1236643874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00bcb4ad6d1219c71",
            "security_group_rule_id": "sgr-04374f0050ff319a1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2164120322",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f99b39258d2804dd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2944373877",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f99b39258d2804dd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_internal_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3000,
            "id": "sgrule-1744494295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a8a3a6628ffbaeda",
            "security_group_rule_id": "sgr-0330f68614449b0b7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_internal_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_internal_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1068813552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a8a3a6628ffbaeda",
            "security_group_rule_id": "sgr-0c2107ad3c7fbfcbc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_internal_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3408322059",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f99b39258d2804dd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "185.205.174.138/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2577056018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00bcb4ad6d1219c71",
            "security_group_rule_id": "sgr-0fb8b74badaf0fd3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip_address",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:route-table/rtb-055205a22d28a3e8b",
            "default_route_table_id": "rtb-055205a22d28a3e8b",
            "id": "rtb-055205a22d28a3e8b",
            "owner_id": "637423603362",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-033ed37908e93baab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01397ea74bfda2018",
            "association_id": "eipassoc-090a16960e446c8ef",
            "domain": "vpc",
            "id": "eipalloc-01397ea74bfda2018",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d7986e77ee0df34d",
            "private_dns": "ip-10-0-101-93.eu-west-2.compute.internal",
            "private_ip": "10.0.101.93",
            "public_dns": "ec2-13-43-125-85.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.125.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:internet-gateway/igw-0775f76f27610063b",
            "id": "igw-0775f76f27610063b",
            "owner_id": "637423603362",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01397ea74bfda2018",
            "association_id": "eipassoc-090a16960e446c8ef",
            "connectivity_type": "public",
            "id": "nat-033ed37908e93baab",
            "network_interface_id": "eni-0d7986e77ee0df34d",
            "private_ip": "10.0.101.93",
            "public_ip": "13.43.125.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-072d52098bc8709ca",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055205a22d28a3e8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-033ed37908e93baab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055205a22d28a3e8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.private_rtb",
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0775f76f27610063b",
            "id": "r-rtb-05c0f54709fef40581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c0f54709fef4058",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:route-table/rtb-05c0f54709fef4058",
            "id": "rtb-05c0f54709fef4058",
            "owner_id": "637423603362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0775f76f27610063b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1f96b21078bf12",
            "route_table_id": "rtb-055205a22d28a3e8b",
            "subnet_id": "subnet-099ddb64b3b7437cf"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_rtb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d76ce21b0d486a4e",
            "route_table_id": "rtb-055205a22d28a3e8b",
            "subnet_id": "subnet-085f9557630be32fd"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_rtb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0decf1d4c73cb24a2",
            "route_table_id": "rtb-055205a22d28a3e8b",
            "subnet_id": "subnet-055d26e3569f12d74"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_rtb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9fb75f9fcafccb2",
            "route_table_id": "rtb-05c0f54709fef4058",
            "subnet_id": "subnet-072d52098bc8709ca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d8c2a9c26a5c8a",
            "route_table_id": "rtb-05c0f54709fef4058",
            "subnet_id": "subnet-07d70d0fc2000c67c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f1d32ac4668f494",
            "route_table_id": "rtb-05c0f54709fef4058",
            "subnet_id": "subnet-0d18990e5b426674a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-099ddb64b3b7437cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ddb64b3b7437cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet0"
            },
            "tags_all": {
              "Name": "private-subnet0"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-085f9557630be32fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f9557630be32fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-055d26e3569f12d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055d26e3569f12d74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-072d52098bc8709ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d52098bc8709ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet0"
            },
            "tags_all": {
              "Name": "public-subnet0"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-07d70d0fc2000c67c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d70d0fc2000c67c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:subnet/subnet-0d18990e5b426674a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d18990e5b426674a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423603362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-0e20b36aa455e3cb2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423603362:vpc/vpc-0e20b36aa455e3cb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbb231299d6bc11c",
            "default_route_table_id": "rtb-055205a22d28a3e8b",
            "default_security_group_id": "sg-034d6826b89a2a902",
            "dhcp_options_id": "dopt-0c910e5576b2c259f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e20b36aa455e3cb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055205a22d28a3e8b",
            "owner_id": "637423603362",
            "tags": {
              "Name": "terraform-project"
            },
            "tags_all": {
              "Name": "terraform-project"
            }
          }
        }
      ]
    }
  ]
}